feat(Extensions): Add translation support for Extensions (#1410)
* feat(marketplace): Add comprehensive i18n support with German, French, and Spanish translations

* Removed translations from Skeletons

* Replaced Trans with MarkdownContent from @backstage/core-components

* Removed translation in featured.yaml file

* Added tranalation for PluginCollection

* Rebased with main branch

* feat(marketplace): Add exports configuration for alpha subpath

* get translated text from util for collections

* add api-reports to eslintignore

* mark translations resources and refs as alpha

* updating api report

Signed-off-by: its-mitesh-kumar <itsmiteshkumar98@gmail.com>

* re-updating api report

Signed-off-by: its-mitesh-kumar <itsmiteshkumar98@gmail.com>

---------

Signed-off-by: its-mitesh-kumar <itsmiteshkumar98@gmail.com>
Co-authored-by: Karthik <karthik.jk11@gmail.com>
Co-authored-by: its-mitesh-kumar <itsmiteshkumar98@gmail.com>

--- a/workspaces/marketplace/examples/collections/featured.yaml
+++ b/workspaces/marketplace/examples/collections/featured.yaml
@@ -5,7 +5,9 @@ metadata:
   namespace: marketplace-plugin-demo
   name: featured
   title: Featured Plugins
+  titleKey: collection.featured.title
   description: A set of great plugins! :)
+  descriptionKey: collection.featured.description
 spec:
   type: curated
   plugins:
