fix(scorecard): Introduce unified config and validation (#1523)
* Introduce provider validation

Signed-off-by: Dominika Zemanovicova <dzemanov@redhat.com>

* Update ids

Signed-off-by: Dominika Zemanovicova <dzemanov@redhat.com>

* Fix report api

Signed-off-by: Dominika Zemanovicova <dzemanov@redhat.com>

---------

Signed-off-by: Dominika Zemanovicova <dzemanov@redhat.com>

--- a/workspaces/scorecard/plugins/scorecard-backend/package.json
+++ b/workspaces/scorecard/plugins/scorecard-backend/package.json
@@ -24,6 +24,7 @@
       "@red-hat-developer-hub/backstage-plugin-scorecard-node"
     ]
   },
+  "configSchema": "config.d.ts",
   "scripts": {
     "start": "backstage-cli package start",
     "build": "backstage-cli package build",
