RHIDP-8891: Support Proxy for Jira integration for the scorecard backend plugin (#1466)
* feat(scorecard): implement logic to support proxy for Jira integration

Signed-off-by: Ihor Mykhno <imykhno@redhat.com>

* fix(scorecard): jira integration README.md file

Signed-off-by: Ihor Mykhno <imykhno@redhat.com>

* refactor(scorecard): proxy jira integration logic

Signed-off-by: Ihor Mykhno <imykhno@redhat.com>

* refactor(scorecard): backend jira module

Signed-off-by: Ihor Mykhno <imykhno@redhat.com>

* chore(scorecard): update jira integration changeset

Signed-off-by: Ihor Mykhno <imykhno@redhat.com>

* fix(scorecard): restore that the apiVersion could be a number

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

* fix(scorecard): merge two configuration sections into one

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

---------

Signed-off-by: Ihor Mykhno <imykhno@redhat.com>
Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>
Co-authored-by: Christoph Jerolimov <jerolimov+git@redhat.com>

--- a/workspaces/scorecard/app-config.yaml
+++ b/workspaces/scorecard/app-config.yaml
@@ -65,7 +65,7 @@ jira:
   # Required: Supported products: `cloud` or `datacenter`
   product: cloud
   # By default, the latest version is used. You can omit this prop when using the latest version.
-  apiVersion: '2'
+  apiVersion: 2
 
 # Reference documentation http://backstage.io/docs/features/techdocs/configuration
 # Note: After experimenting with basic setup, use CI/CD to generate docs
