feat(i18n): add TMS returned Fr translation batch 2 (#1559)
* feat(i18n): add TMS returned Fr translation batch 2

Signed-off-by: Yi Cai <yicai@redhat.com>

* chore: add changesets

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

* chore: update sonarcloud configuration to ignore all tests and translations

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

---------

Signed-off-by: Yi Cai <yicai@redhat.com>
Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>
Co-authored-by: Christoph Jerolimov <jerolimov+git@redhat.com>

--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,1 +1,1 @@
-sonar.cpd.exclusions=workspaces/bulk-import/plugins/bulk-import-backend/src/**/*.test.*
+sonar.cpd.exclusions=workspaces/*/plugins/*/**/*.test.*, workspaces/*/plugins/*/src/translations/*.ts
