--- a/workspaces/lightspeed/plugins/lightspeed/package.json
+++ b/workspaces/lightspeed/plugins/lightspeed/package.json
@@ -57,11 +57,11 @@
     "@material-ui/core": "^4.9.13",
     "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/icons-material": "^6.1.8",
-    "@patternfly/chatbot": "6.3.2",
-    "@patternfly/react-core": "6.3.1",
+    "@patternfly/chatbot": "6.4.0-prerelease.25",
+    "@patternfly/react-core": "6.4.0-prerelease.2",
+    "@patternfly/react-icons": "^6.3.1",
     "@red-hat-developer-hub/backstage-plugin-lightspeed-common": "workspace:^",
     "@tanstack/react-query": "^5.59.15",
-    "openai": "^4.52.6",
     "react-markdown": "^9.0.1",
     "react-use": "^17.2.4"
   },
