--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,1 +1,1 @@
-sonar.cpd.exclusions=workspaces/*/plugins/*/**/*.test.*, workspaces/*/plugins/*/src/translations/*.ts
+sonar.cpd.exclusions=workspaces/*/plugins/*/**/*.test.*, workspaces/*/plugins/*/src/translations/*.ts, workspaces/*/plugins/*/__fixtures__/*
