--- a/workspaces/bulk-import/package.json
+++ b/workspaces/bulk-import/package.json
@@ -6,7 +6,7 @@
     "node": "18 || 20"
   },
   "scripts": {
-    "start": "backstage-cli repo start",
+    "start": "NODE_OPTIONS=--no-node-snapshot backstage-cli repo start",
     "tsc": "tsc",
     "tsc:full": "tsc --skipLibCheck true --incremental false",
     "build:all": "backstage-cli repo build --all",
