--- a/workspaces/bulk-import/packages/backend/package.json
+++ b/workspaces/bulk-import/packages/backend/package.json
@@ -37,6 +37,7 @@
     "@backstage/plugin-permission-node": "^0.10.3",
     "@backstage/plugin-proxy-backend": "^0.6.5",
     "@backstage/plugin-scaffolder-backend": "^2.2.0",
+    "@backstage/plugin-scaffolder-backend-module-github": "^0.8.2",
     "@backstage/plugin-search-backend": "^2.0.5",
     "@backstage/plugin-search-backend-module-catalog": "^0.3.7",
     "@backstage/plugin-search-backend-module-pg": "^0.5.47",
@@ -44,8 +45,9 @@
     "@backstage/plugin-search-backend-node": "^1.3.14",
     "@backstage/plugin-techdocs-backend": "^2.0.5",
     "@red-hat-developer-hub/backstage-plugin-bulk-import-backend": "workspace:^",
+    "@roadiehq/scaffolder-backend-module-utils": "^3.6.0",
     "app": "link:../app",
-    "better-sqlite3": "^9.0.0",
+    "better-sqlite3": "^12.4.1",
     "node-gyp": "^10.0.0",
     "pg": "^8.11.3",
     "winston": "^3.2.1"
