--- a/workspaces/bulk-import/plugins/bulk-import/package.json
+++ b/workspaces/bulk-import/plugins/bulk-import/package.json
@@ -90,6 +90,7 @@
     "prettier": "3.6.2",
     "react": "16.13.1 || ^17.0.0 || ^18.0.0"
   },
+  "configSchema": "config.d.ts",
   "files": [
     "dist",
     "dist-scalprum",
