fix(bulk-import): use maintained fetch-event-source dependency and dropped unused scaffolder-backend-module-utils (#1590)
Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,1 +1,1 @@
-sonar.cpd.exclusions=workspaces/*/plugins/*/**/*.test.*, workspaces/*/plugins/*/src/translations/*.ts, workspaces/*/plugins/*/__fixtures__/*
+sonar.cpd.exclusions=workspaces/*/packages/app/**, workspaces/*/packages/backend/**, **/*.test.*, **/translations/*.ts, **/__fixtures__/*
