--- a/workspaces/bulk-import/plugins/bulk-import-backend/package.json
+++ b/workspaces/bulk-import/plugins/bulk-import-backend/package.json
@@ -43,7 +43,6 @@
     "openapi": "./scripts/openapi.sh"
   },
   "dependencies": {
-    "@ai-zen/node-fetch-event-source": "2.1.4",
     "@backstage/backend-defaults": "^0.12.0",
     "@backstage/backend-plugin-api": "^1.4.2",
     "@backstage/catalog-model": "^1.7.5",
@@ -54,6 +53,7 @@
     "@backstage/plugin-permission-common": "^0.9.1",
     "@backstage/plugin-permission-node": "^0.10.3",
     "@gitbeaker/rest": "^43.4.0",
+    "@microsoft/fetch-event-source": "^2.0.1",
     "@octokit/auth-app": "^6.0.3",
     "@octokit/rest": "^20.0.2",
     "@red-hat-developer-hub/backstage-plugin-bulk-import-common": "workspace:^",
