feat(bulk-import): include config.d.ts to the release bundle (#1601)
* feat(bulk-import): include config.d.ts to the release bundle

Signed-off-by: Oleksandr Andriienko <oandriie@redhat.com>

* fix(buld-import): add changeset

Signed-off-by: Oleksandr Andriienko <oandriie@redhat.com>

---------

Signed-off-by: Oleksandr Andriienko <oandriie@redhat.com>

--- a/workspaces/bulk-import/plugins/bulk-import/package.json
+++ b/workspaces/bulk-import/plugins/bulk-import/package.json
@@ -94,7 +94,8 @@
   "files": [
     "dist",
     "dist-scalprum",
-    "app-config.yaml"
+    "app-config.yaml",
+    "config.d.ts"
   ],
   "repository": {
     "type": "git",
