--- a/workspaces/marketplace/package.json
+++ b/workspaces/marketplace/package.json
@@ -50,8 +50,7 @@
     "minimatch": "3",
     "node-gyp": "^9.0.0",
     "prettier": "^3.4.2",
-    "typescript": "~5.3.0",
-    "yaml": "^2.8.1"
+    "typescript": "~5.3.0"
   },
   "resolutions": {
     "@backstage/app-defaults": "1.6.5",
