--- a/workspaces/scorecard/plugins/scorecard-backend/package.json
+++ b/workspaces/scorecard/plugins/scorecard-backend/package.json
@@ -40,6 +40,7 @@
     "@backstage/catalog-client": "^1.11.0",
     "@backstage/catalog-model": "^1.7.5",
     "@backstage/errors": "^1.2.7",
+    "@backstage/plugin-catalog-common": "^1.1.5",
     "@backstage/plugin-catalog-node": "^1.18.0",
     "@backstage/plugin-permission-common": "^0.9.1",
     "@backstage/plugin-permission-node": "^0.10.3",
