--- a/workspaces/bulk-import/packages/backend/package.json
+++ b/workspaces/bulk-import/packages/backend/package.json
@@ -38,6 +38,7 @@
     "@backstage/plugin-proxy-backend": "^0.6.5",
     "@backstage/plugin-scaffolder-backend": "^2.2.0",
     "@backstage/plugin-scaffolder-backend-module-github": "^0.8.2",
+    "@backstage/plugin-scaffolder-backend-module-gitlab": "0.9.4",
     "@backstage/plugin-search-backend": "^2.0.5",
     "@backstage/plugin-search-backend-module-catalog": "^0.3.7",
     "@backstage/plugin-search-backend-module-pg": "^0.5.47",
