working job creation

--- a/workspaces/x2a/app-config.yaml
+++ b/workspaces/x2a/app-config.yaml
@@ -42,3 +42,8 @@ kubernetes:
   clusterLocatorMethods:
     - type: 'config'
       clusters: []
+
+# X2A plugin configuration
+x2a:
+  # Namespace where X2A jobs and resources will be created
+  namespace: x2a
